--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,15 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.2.224</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -185,7 +188,7 @@
 
     <profiles>
         <profile>
-            <id>prod</id>
+            <id>test</id>
             <properties>
                 <spring.profiles.active>prod</spring.profiles.active>
             </properties>
