--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
-    username: jira
-    password: JiraRush
+    username:
+    password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
