--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
         <profile>
             <id>test</id>
             <properties>
-                <spring.profiles.active>prod</spring.profiles.active>
+                <spring.profiles.active>test</spring.profiles.active>
             </properties>
             <build>
                 <plugins>
@@ -198,7 +198,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <skipTests>true</skipTests>
+                            <skipTests>false</skipTests>
                         </configuration>
                     </plugin>
                 </plugins>
