--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -2,6 +2,8 @@ spring.cache.type: none
 spring:
   init:
     mode: always
+  profiles:
+    active: test
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
