--- a/pom.xml
+++ b/pom.xml
@@ -188,9 +188,9 @@
 
     <profiles>
         <profile>
-            <id>test</id>
+            <id>prod</id>
             <properties>
-                <spring.profiles.active>test</spring.profiles.active>
+                <spring.profiles.active>prod</spring.profiles.active>
             </properties>
             <build>
                 <plugins>
