--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -2,10 +2,22 @@ spring.cache.type: none
 spring:
   init:
     mode: always
+  config:
+    activate:
+      on-profile: test
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:jira-test;NON_KEYWORDS=VALUE
     driverClassName: org.h2.Driver
-    username:
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    generate-unique-name: false
+    hikari:
+      maximum-pool-size: 5
+      connection-timeout: 60000
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  liquibase:
+    changeLog: "classpath:db/changelog-test.sql"
+  test:
+    database:
+      replace: none
