--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -2,7 +2,22 @@ spring.cache.type: none
 spring:
   init:
     mode: always
+  config:
+    activate:
+      on-profile: test
   datasource:
-    url: jdbc:postgresql://localhost:5433/jira-test
-    username: jira
-    password: JiraRush
+    url: jdbc:h2:mem:jira-test;NON_KEYWORDS=VALUE
+    driverClassName: org.h2.Driver
+    generate-unique-name: false
+    hikari:
+      maximum-pool-size: 5
+      connection-timeout: 60000
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  liquibase:
+    changeLog: "classpath:db/changelog-test.sql"
+  test:
+    database:
+      replace: none
