dockerfile was updated

--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,10 @@
     </dependencies>
 
     <build>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>./resources</directory>  </resource>-->
+<!--        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
